fix(package; package-lock): Add license and update package metadata in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
     "name": "add2gitignore",
     "displayName": "Add2Gitignore",
-    "description": "在资源管理器中右键文件或文件夹，将其添加到最近的 Git 仓库的 .gitignore 中。在使用vs code workspace且有多个git仓库在其中时，能更正确的定位到对应的.gitignore文件。",
+    "description": "在资源管理器中右键文件或文件夹，将其添加到最近的 Git 仓库的 .gitignore 中；在含多个 Git 仓库的 VS Code 工作区中能正确定位目标 .gitignore 文件。",
     "version": "0.0.1",
-    "publisher": "maple-wang",
+    "publisher": "MapleWang",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MapleWangAudio/add2gitignore.git"
+    },
+    "bugs": {
+        "url": "https://github.com/MapleWangAudio/add2gitignore/issues"
+    },
     "engines": {
         "vscode": "^1.84.0"
     },
     "categories": [
         "Other"
     ],
-    "activationEvents": [
-        "onCommand:add2gitignore.addEntry"
+    "keywords": [
+        "gitignore",
+        "git",
+        "ignore",
+        "explorer",
+        "context-menu"
     ],
+    "activationEvents": [],
     "main": "./dist/extension.js",
     "contributes": {
         "commands": [
@@ -37,16 +50,16 @@
         "vscode:prepublish": "npm run compile",
         "watch": "tsc -w -p ./",
         "lint": "eslint --ext .ts src",
-        "package": "vsce package --allow-missing-repository",
-        "publish": "vsce publish"
+        "package": "npx vsce package",
+        "publish": "npx vsce publish"
     },
     "devDependencies": {
         "@types/node": "^18.19.0",
         "@types/vscode": "^1.84.0",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "@vscode/vsce": "^2.24.0",
         "eslint": "^8.57.0",
-        "typescript": "5.3.3",
-        "@vscode/vsce": "^2.24.0"
+        "typescript": "5.3.3"
     }
 }
